# iCloudPlugin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/: __init__.py
config/: categories.local.txt  category-groups.json  example-mining-report.json  examples.jsonl  external-taxonomy-aliases.json  external-taxonomy-prune.json  heuristic-rules.json  hybrid-gating.json  lightgbm-classifier.joblib  lightgbm-training-report.json  reviewed-examples-report.json  taxonomy-router-report.json  taxonomy-router.joblib  taxonomy-sources.json  vault-folder-labels.json
docs/: chat-handoff.md  operations.md  workspace-map.md
migrations/: env.py
scripts/: import_duplicate_quarantine_to_changes_backup.py  install_codex_plugin.py  reindex-icloud-index.ps1  reindex-icloud-index.sh  report_product_readiness.py  run_chatgpt_mcp_server.py  secure_mcp_tunnel_plan.py
tests/: conftest.py  test_auth_session_manager.py  test_categorization_service.py  test_category_manager.py  test_chatgpt_app_submission.py  test_classification_submission.py  test_classifier_api_codex_gate.py  test_classifier_container_layout.py  test_classifier_image_pipeline.py  test_classifier_reset_runtime.py  test_classifier_role_imports.py  test_classifier_runtime_settings.py  test_classify_to_obsidian_codex_arbiter.py  test_cloud_vault_task_service.py  test_codex_arbiter.py  test_config.py  test_crawler.py  test_dedupe_workflow_service.py  test_degraded_mode.py  test_document_vault_fallback.py  test_document_vault_mutation.py  test_example_mining.py  test_external_taxonomy.py  test_extractor.py  test_file_mutation_service.py  test_files_api_mutation.py  test_gmail_export.py  test_health_api.py  test_hybrid_runtime.py  (+21 more)
(+175 files in other folders)
