[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icloud-index-plugin"
version = "0.1.0"
description = "Private iCloud Drive indexing service and Codex plugin scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "mcp>=1.9.0",
  "pydantic>=2.10.0",
  "pyicloud>=2.5.0",
  "requests>=2.32.3",
  "pandas>=2.2.3",
  "python-docx>=1.1.2",
  "python-magic>=0.4.27",
  "openpyxl>=3.1.5",
  "pillow>=11.1.0",
  "pillow-heif>=0.21.0",
  "pypdf>=5.1.0",
  "pytesseract>=0.3.13",
  "joblib>=1.4.2",
  "numpy>=2.1.3",
  "scikit-learn>=1.5.2",
  "lightgbm>=4.5.0",
  "paddleocr>=2.9.1",
  "pytest>=8.3.3",
]

[project.scripts]
icloud-plugin-mcp = "icloud_plugin_mcp.server:main"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
